--- a/kustom-webapp/overlays/dev/kustomization.yaml
+++ b/kustom-webapp/overlays/dev/kustomization.yaml
@@ -1,7 +1,10 @@
 bases:
 - ../../base
 
-patchesStrategicMerge:
+# the kustom chart would not render
+# patches:
+#  - replicas.yaml
+patchesStrategicMerge: 
  - replicas.yaml
 
 configMapGenerator:
